--- a/book_progress.yaml
+++ b/book_progress.yaml
@@ -1,10 +1,18 @@
 book_data:
+
   - heading: Reading
+    cover_art:
+      margin: 2
+      height: 240
+      width: 160
+      scale: .4
+
     books:
     - title: Effective Python
       author: Brett Slatkin
       page: 112
       total_pages: 472
+      cover_art: effective_python.png
 
     - title: Site Reliability Engineering
       author: Google
@@ -20,6 +28,11 @@ book_data:
 
 
   - heading: Read
+    cover_art:
+      margin: 4
+      height: 240
+      width: 160
+      scale: 1.4
     books:
     - title: DevOps HandBook
       cover_art: devops_handbook.jpg
