feat: comment only sections

--- a/book_progress.yaml
+++ b/book_progress.yaml
@@ -1,5 +1,8 @@
 book_data:
 
+  - heading: About `book_tracker`
+    comment_before: "book_tracker is a `YAML` configured book tracker, that renders to markdown, targeted for `gfm`. It is meant to be very high level, while still providing a solid level of customization."
+
   - heading: Reading
     cover_art:
       scale: 1
